[tool:pytest]
addopts = --doctest-modules
python_files = nlp_primitives/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
[flake8]
exclude = docs/*
ignore = E501,W504
[metadata]
description-file = README.md
[aliases]
test=pytest
[isort]
forced_separate=nlp_primitives
multi_line_output=3
