[metadata]
name = nlp_primitives
version = attr: nlp_primitives.version.__version__
author = Alteryx Inc.
license = BSD 3-clause
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alteryx/nlp_primitives
download_url = https://pypi.org/project/nlp-primitives/
project_urls =
    Source Code = https://github.com/alteryx/nlp_primitives
    Changes = https://github.com/alteryx/nlp_primitives/blob/main/docs/source/changelog.rst
    Issue Tracker = https://github.com/alteryx/nlp_primitives/issues
    Twitter = https://twitter.com/alteryxoss
    Chat = https://join.slack.com/t/alteryx-oss/shared_invite/zt-6inxevps-RSbpr9lsACE1kObXz4rIuA
author_email = open_source_support@alteryx.com
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.7,<4
include_package_data = True
zip_safe = False

install_requires =
    numpy >= 1.17.5
    pandas >= 1.3.0
    featuretools >= 1.5.0
    nltk >= 3.4.5
    scikit-learn >= 0.20.0

[options.extras_require]
complete =
    tensorflow >= 1.14.0; sys_platform!="darwin" or platform_machine!='arm64'
    tensorflow-metal >= 0.4.0; sys_platform=="darwin" and platform_machine=='arm64'
    tensorflow-macos >= 2.8.0; sys_platform=="darwin" and platform_machine=='arm64'
    tensorflow_hub >= 0.4.0

test =
    flake8 >= 3.7.0
    autopep8 >= 1.4.3
    isort >= 5.0.5
    pytest >= 4.4.1
    %(complete)s

[options.entry_points]
featuretools_plugin =
    nlp_primitives = nlp_primitives
featuretools_primitives =
    nlp_primitives = nlp_primitives

[tool:pytest]
addopts = --doctest-modules
python_files = nlp_primitives/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[flake8]
exclude = docs/*
ignore = E501,W504

[aliases]
test=pytest

[isort]
forced_separate=nlp_primitives
multi_line_output=3
