[metadata]
name = nlp_primitives
version = attr: nlp_primitives.version.__version__
url = https://github.com/alteryx/nlp_primitives
download_url = https://pypi.org/project/nlp-primitives/
project_urls =
    Source Code = https://github.com/alteryx/nlp_primitives
    Changes = https://github.com/alteryx/nlp_primitives/blob/main/docs/source/changelog.rst
    Issue Tracker = https://github.com/alteryx/nlp_primitives/issues
    Twitter = https://twitter.com/alteryxoss
    Chat = https://join.slack.com/t/alteryx-oss/shared_invite/zt-6inxevps-RSbpr9lsACE1kObXz4rIuA
author = Alteryx Inc.
author_email = open_source_support@alteryx.com
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = BSD 3-clause
license_files = 
    LICENSE
description = natural language processing primitives for Featuretools
long_description = file: README.md
long_description_content_type = text/markdown
keywords = feature engineering, data, science, machine learning, natural language processing
platforms = any

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    numpy >= 1.17.5
    pandas >= 1.3.0
    featuretools >= 1.5.0
    nltk >= 3.7
    scikit-learn >= 0.20.0
    woodwork >= 0.8.1
python_requires = >=3.8, <4

[options.extras_require]
dev =
    flake8 == 4.0.1
    isort == 5.9.3
    black == 22.3.0
    %(test)s
test =
    pytest >= 7.1.2
    pytest-cov >= 3.0.0
complete =
    tensorflow >= 1.14.0; sys_platform!="darwin" or platform_machine!='arm64'
    tensorflow-metal >= 0.4.0; sys_platform=="darwin" and platform_machine=='arm64'
    tensorflow-macos >= 2.8.0; sys_platform=="darwin" and platform_machine=='arm64'
    tensorflow_hub >= 0.4.0

[options.package_data]
* =
    *.txt
    LICENSE
    README.md
 nlp_primitives =
    data/nltk-data/**/*
    
[options.entry_points]
featuretools_plugin =
    nlp_primitives = nlp_primitives
featuretools_primitives =
    nlp_primitives = nlp_primitives

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs/*
ignore = E501,W504,W503 # line too long error, line break after and before binary operator
